# wearable-hub

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  POC.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  mappings.py
backend/app/api/routes/v1/: __init__.py  agent.py  (+4 more)
backend/app/integrations/celery/: core.py
backend/app/models/: __init__.py  agent_run_log.py  audio_daily_summary.py  audio_sample.py  daily_score.py  questionnaire_response.py
backend/app/schemas/roojai/: agent.py  ai.py  audio.py  questionnaire.py  score.py
backend/app/services/: agent_core.py  ai_agent_service.py  audio_sample_service.py  daily_score_service.py  questionnaire_questions.py  questionnaire_scenario_service.py  questionnaire_service.py
backend/app/services/seed_data/: service.py
backend/config/: .env.example
backend/migrations/versions/: 2026_05_08_0638-d46097fb11fc_add_audio_sample_table.py  2026_05_08_1452-418b9ec4294a_alter_audio_sample_add_trigger_fields_.py  2026_05_08_1512-ac59efc39af8_create_questionnaire_response_table.py  2026_05_08_1530-b7c1d2e3f4a5_create_daily_score_table.py  2026_05_08_1640-c3d4e5f6a7b8_create_agent_run_log_table.py
backend/scripts/: seed_questionnaire.py  seed_scenario.py  stream_data.py
backend/scripts/init/: seed_activity_data.py
docs/: sdk-onboarding.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/components/user/: agent-report-section.tsx  scores-section.tsx
frontend/src/hooks/api/: use-agent.ts
frontend/src/lib/api/: config.ts
frontend/src/lib/query/: keys.ts
mcp/: pyproject.toml
(+3 files in other folders)
