[project]
name = "open-wearables-mcp"
version = "0.1.0"
description = "MCP server for Open Wearables - query wearable health data via AI assistants"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
code-quality = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[project.scripts]
start = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = 'py313'
exclude = ["README.md", ".python-version", "LICENSE", "app/models/"]

[tool.ruff.lint]
select = [
    "I",     # isort
    "F",     # pyflakes
    "FAST",  # FastApi
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "COM",   # flake8-commas
    "T10",   # flake8-debugger
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN204", # missing-return-type-special-method
    "ANN401", # any-type
    "RET503", # implicit-return
    "COM812", # trailing-comma (conflicts with ruff format)
]
